# dhara_storage

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dhara.Storage.slnx  README.md  dhara.config.toml  mindvault.toml
.cursor/rules/: breaking-changes.mdc  documentation.mdc  logging.mdc
.github/actions/compute-dhara-tool-hash/: action.yml
.github/actions/restore-dhara-tool/: action.yml
.github/actions/setup-linux-tool-deps/: action.yml
.github/workflows/: ci.yml  dhara-tool-build.yml  package-verify.yml  pipeline.yml  publish-crates.yml  publish-nuget.yml  release.yml
bindings/dotnet/Dhara.Storage/: Dhara.Storage.csproj  README.md
bindings/dotnet/Dhara.Storage.Tests/: Dhara.Storage.Tests.csproj
dhara_dhbin/: README.md
dhara_storage/: README.md
dhara_storage_native/: README.md
docs/: README.md  architecture.md  ci-cd-pipelines.md  filedefs-dat.md  logging.md  native-packaging.md  typed-c-compatible-abi.md
docs/ai/: README.md
src/bindings/Dhara.Storage/: Dhara.Storage.csproj  README.md
src/bindings/Dhara.Storage.Tests/: Dhara.Storage.Tests.csproj
src/bindings/csharp/Dhara.Storage/: Dhara.Storage.csproj  DharaStorage.cs  README.md
src/bindings/csharp/Dhara.Storage.ConsumerSmoke/: Dhara.Storage.ConsumerSmoke.csproj
src/bindings/csharp/Dhara.Storage.Tests/: Dhara.Storage.Tests.csproj
src/bindings/dharastorage-ffi/: Cargo.toml  README.md
src/bindings/dharastorage-ffi/src/: models.rs  queries.rs
src/bindings/dharastorage-ffi/tests/: ffi_exports.rs
src/core/dhara_storage/: Cargo.toml  README.md
src/core/dhara_storage/src/: analysis.rs  definitions.rs  lib.rs  watch.rs
src/core/dhara_storage/src/info/: directory.rs  file.rs  mod.rs  shell_icon.rs  windows_shell.rs
src/core/dhara_storage/tests/: analysis.rs  operations.rs
src/core/dhara_storage_dal/: Cargo.toml  README.md
src/dharastorage/: Cargo.toml  README.md
src/dharastorage/src/: queries.rs  typed.rs  watching.rs
src/dharastorage/tests/: ffi_exports.rs
src/dynamic/dharastorage/: Cargo.toml  README.md
src/dynamic/dhbin/: README.md
src/static/dhara_dhbin/: Cargo.toml  README.md
src/static/dhara_storage/: Cargo.toml  README.md
src/static/dhara_storage_dal/: Cargo.toml  README.md
src/static/dhara_storage_dal/schema/: dsfd-metadata.xsd  filedefs.fbs
src/static/dhara_storage_dal/src/: bundled.rs  codec.rs  container.rs  error.rs  lib.rs  model.rs
tooling/dhara_storage_ops/: Cargo.toml  README.md
tooling/dhara_storage_ops/src/: builder.rs  capability.rs  config.rs  defs.rs  lib.rs  package_flow.rs  release_flow.rs  runner.rs  support.rs  verify.rs
tooling/dhara_tool/: Cargo.toml  README.md  build.rs
tooling/dhara_tool/crates/dhara_tool/: Cargo.toml  build.rs
tooling/dhara_tool/crates/dhara_tool/src/: app.rs
tooling/dhara_tool/crates/dhara_tool_cli/: Cargo.toml
tooling/dhara_tool/crates/dhara_tool_cli/src/: command.rs  commands.rs  forms.rs  lib.rs  registry.rs  runner.rs
tooling/dhara_tool/crates/dhara_tool_cli/src/commands/: config.rs  defs.rs  mod.rs  package.rs  quality.rs
tooling/dhara_tool/crates/dhara_tool_cli/src/registry/: config.rs  defs.rs  mod.rs  package.rs  quality.rs  release.rs  ui.rs
tooling/dhara_tool/crates/dhara_tool_gui/: Cargo.toml
tooling/dhara_tool/crates/dhara_tool_gui/src/: lib.rs
tooling/dhara_tool/crates/dhara_tool_gui/src/gui/: app.rs  boot.rs  form.rs  mod.rs  panels.rs  state.rs  style.rs  tree.rs
tooling/dhara_tool/crates/dhara_tool_gui/src/gui/screens/: activation.rs  history.rs  mod.rs  nav.rs  options.rs  repo_setup.rs  shell.rs  terminal.rs
tooling/dhara_tool/crates/dhara_tool_gui/src/gui/widgets/: action_bar.rs  button.rs  field.rs  input.rs  mod.rs  modal_overlay.rs  panel.rs  path_field.rs  progress.rs  scroll_area.rs  select.rs  separator.rs  stepper.rs  tab_view.rs  tabs.rs  tree_row.rs
tooling/dhara_tool/crates/dhara_tool_kernel/: Cargo.toml
tooling/dhara_tool/crates/dhara_tool_kernel/src/: activation.rs  context.rs  lib.rs  msvc.rs  paths.rs  repo_config.rs  runtime_cache.rs  workspace.rs
tooling/dhara_tool/crates/dhara_tool_kernel/src/filedefs/: mod.rs  package.rs
tooling/dhara_tool/crates/dhara_tool_kernel/src/filedefs/trid/: mime.rs  mod.rs  model.rs  sluice.rs
tooling/dhara_tool/crates/dhara_tool_kernel/src/logging/: audit.rs  mod.rs  progress.rs
tooling/dhara_tool/crates/dhara_tool_ops/: Cargo.toml
tooling/dhara_tool/crates/dhara_tool_ops/src/: lib.rs  native_merge.rs  native_rids.rs  nuget.rs  quality.rs  release.rs  verify.rs
tooling/dhara_tool/package/: README.md
tooling/dhara_tool/src/: activation.rs  app.rs  command.rs  commands.rs  lib.rs  native_rids.rs  nuget.rs  paths.rs  quality.rs  registry.rs  release.rs  repo_config.rs  subprocess.rs  verify.rs  workers.rs  workspace.rs
tooling/dhara_tool/src/capabilities/: dhara_storage.rs
tooling/dhara_tool/src/filedefs/: mod.rs  package.rs  runner.rs
tooling/dhara_tool/src/filedefs/trid/: mod.rs  sluice.rs  source.rs  source_manifest.rs
tooling/dhara_tool/src/gui/: app.rs  form.rs  mod.rs  panels.rs  state.rs  style.rs  tree.rs
tooling/dhara_tool/src/logging/: audit.rs  mod.rs  progress.rs
tooling/dhara_tool/src/ops/: builder.rs  capability.rs  config.rs  defs.rs  logging.rs  mod.rs  package_flow.rs  release_flow.rs  runner.rs  support.rs  verify.rs  workspace.rs
tooling/dhara_tool/src/ops/trid_xml/: mod.rs  model.rs  sluice.rs  source.rs  source_manifest.rs
tooling/dhara_tool/src/tui/: exec.rs  render.rs  state.rs  terminal.rs
tooling/dhara_tool/src/ui/: exec.rs  mod.rs
tooling/dhara_tool/tests/fixtures/: trid_xml.source.toml
tooling/dhara_tool_dhara_storage/: Cargo.toml  README.md
tooling/dhara_tool_dhara_storage/src/: capability.rs  config.rs  lib.rs  package_flow.rs  release_flow.rs  support.rs
tooling/scripts/: ensure-dhara-tool-dist.ps1  ensure-dhara-tool-dist.sh  merge-native.ps1  merge-native.sh  release-run-windows.ps1  stage-native-linux.sh  stage-native-windows.ps1  verify-local.ps1  verify-local.sh  verify-package.ps1
(+34 files in other folders)
