[workspace]
members = [
    "src/core/dhara_storage_dal",
    "src/core/dhara_storage",
    "src/dharastorage",
    "tooling/dhara_tool",
]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/D-Naveenz/dhara_storage"
homepage = "https://github.com/D-Naveenz/dhara_storage"

[workspace.dependencies]
dhara_storage_dal = { version = "0.7.1", path = "src/core/dhara_storage_dal" }
dhara_storage = { version = "0.7.1", path = "src/core/dhara_storage" }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1   # Allows compiler to perform better optimization.
lto = true          # Enables Link-time Optimization.
opt-level = "s"     # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true        # Ensures debug symbols are removed.
