[workspace]
members = [
    "crates/dhara_tool_kernel",
    "crates/dhara_tool_ops",
    "crates/dhara_tool_cli",
    "crates/dhara_tool_gui",
    "crates/dhara_tool",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/D-Naveenz/dhara_storage"
homepage = "https://github.com/D-Naveenz/dhara_storage"
