[package]
name = "dhara_storage_dal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FlatBuffers data access layer for Dhara Storage file definitions."
readme = "README.md"
documentation = "https://docs.rs/dhara_storage_dal"
keywords = ["flatbuffers", "storage", "definitions", "dal", "dhara"]
categories = ["encoding", "filesystem"]

[lib]
crate-type = ["rlib"]

[dependencies]
flatbuffers = "25.12.19"
once_cell = "1.21"
thiserror = "2.0"
tracing = "0.1"
