[package]
name = "dhara_tool_cli"
version = "0.8.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI command registry and entry for the Dhara operator tool."
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dhara_tool_kernel = { path = "../dhara_tool_kernel" }
dhara_tool_ops = { path = "../dhara_tool_ops" }

[dev-dependencies]
tempfile = "3.27"
