[package]
name = "dhara_tool_gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Graphical operator UI for the Dhara tool."
publish = false

[dependencies]
anyhow = "1.0"
dhara_tool_cli = { path = "../dhara_tool_cli" }
dhara_tool_kernel = { path = "../dhara_tool_kernel" }
iced = { version = "0.14.0", features = ["tokio", "svg"] }
rfd = "0.15"

[dev-dependencies]
tempfile = "3.27"
