[package]
name = "dhara_tool_kernel"
version = "0.8.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared kernel for the Dhara operator tool (paths, config, defs, logging)."
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dhara_storage_dal = { version = "0.9.0" }
once_cell = "1.21"
quick-xml = { version = "0.40.1", features = ["serialize"] }
rayon = "1.10"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "2.0"
tempfile = "3.27"
thiserror = "2.0"
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
xmltree = "0.12.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
